# cso2-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
appimage/: cso2-starter.desktop
ci/: build.ps1  pack.ps1  setup.ps1
cmake_modules/: program_version.cmake
headers/: csstarterapp.hpp  launchersettings.hpp  starter_version.hpp.in
headers/layouts/: aboutdialog.hpp  launchersettingsdialog.hpp  mainwindow.hpp
resources/: icons-breeze.qrc  icons-starter.qrc
resources/layouts/: aboutdialog.ui  launchersettingsdialog.ui  mainwindow.ui
resources/win32/: starter.rc
sources/: csstarterapp.cpp  launchersettings.cpp  main.cpp
sources/layouts/: aboutdialog.cpp  launchersettingsdialog.cpp  mainwindow.cpp
